# oxidized_roga_challenge

./: .default.env  .env  .gitignore  Cargo.toml  Makefile  README.md  benchmark.yml  report.yml  sqlx-data.json
.github/: CODEOWNERS
.github/workflows/: build.yml
.local/: Dockerfile  docker-compose.yml  redis.conf
.local/scripts/: reset_database.sh
.sqlx/: query-1305bdf8a9c709b7ad0e89c5ad479b8eb94d4f505b70fe7b40fe05a3f32551db.json  query-18a944839955f70e098d720634de6d8fa695d931110467b7a284fd1426e1af4a.json  query-2c4cfc7f8366a2f2fae0905436d034296d73e82df3ae4b46986e9a71f544f454.json  query-3bb4699772618e765187c6cb53ae5fbb4c3af8b43dd23dc565d89a0f5c86cd49.json  query-5b3096abffcff457e179ced963a176fc9add109c3fce301cd3556d0c5877cf62.json  query-7ae41861ab6866bc361366762294b5a77babe29b0d7043b91a70c2ea0baabf2d.json  query-8044f451fd84e04443318ee8a4e0344b1b838eafa0865e2d6ebcd2d1529ed2ab.json  query-84033ca5934da97a4eb1debcb9198188f7a4da599c0fb9cd457cd8c45f708c96.json  query-996bfffffdcaf34d435d8e8cc136a496c1f6dab379afebaaf6b57ec6c1c42942.json  query-aa2d01a42466e7994f3c47b91586051f54dabad55454cb04a6f2013ea0c5a659.json  query-b06620f18b2ebc83ae3d5d7e7b6b709ca1350329f961754a35e600d883b3554a.json  query-db3ecc4f08fc73927ec5c8791882567aca237935f8422a849d0285b862883811.json  query-f8543db7599fd661761e36b522f6e7ed53486692e9bde423f313a7b659f10544.json
backend/: Cargo.toml
backend/src/: main.rs  objects.rs  routers.rs
backend/src/messages/: mod.rs  ok.rs
backend/src/middlewares/: authorization.rs
backend/src/objects/: address.rs  annotation.rs  person.rs
backend/src/routers/: login.rs  persons.rs  users.rs
backend/src/state/: mod.rs
cache/: Cargo.toml
cache/src/service/: mod.rs
cep-service/: Cargo.toml
cep-service/src/: lib.rs  responses.rs  structs.rs  traits.rs
cep-service/src/responses/: cep.rs  error.rs  service.rs
cep-service/src/structs/: cep.rs  service.rs
database/: Cargo.toml
database/src/: lib.rs  models.rs  traits.rs
database/src/models/: annotation.rs  person.rs  user.rs
database/src/pool/: mod.rs
database/src/traits/: database.rs  login.rs  persist.rs  token.rs
migrations/: 20230502183137_create_users_table.up.sql  20230502195430_create_persons_table.up.sql  20230502195754_create_annotations_table.down.sql  20230502195754_create_annotations_table.up.sql
