[package]
name = "backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = { version = "0.8.2", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.28"
futures-lite = "1.13.0"
hyper = "0.14.26"
hyperlocal = "0.8.0"
num_cpus = "1.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
sqlx = { version = "0.6.3", features = [
    "mysql",
    "bigdecimal",
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "decimal",
    "uuid",
    "migrate",
    "tls",
    "offline",
    "ipnetwork",
] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }

[dependencies.database]
path = "../database"

[dependencies.cep-service]
path = "../cep-service"
