[package]
name = "backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
hyper = "1.7.0"
hyperlocal = "0.9.1"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = [
    "mysql",
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "uuid",
    "migrate",
    "ipnetwork",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dependencies.database]
path = "../database"

[dependencies.cep-service]
path = "../cep-service"
