[package]
name = "backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.32"
hyper = "1.10.1"
hyperlocal = "0.9.1"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = [
    "mysql",
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "uuid",
    "migrate",
    "ipnetwork",
] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[dependencies.database]
path = "../database"

[dependencies.cep-service]
path = "../cep-service"
