[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
redis = { version = "0.23.0", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster",
    "json",
] }
tokio = { version = "1.28.0", features = ["full"] }

[dependencies.cep-service]
path = "../cep-service"
