[package]
name = "database"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argon2 = "0.5.0"
async-trait = "0.1.68"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bytes = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = { version = "0.8.2", features = ["serde"] }
dotenv = "0.15.0"
http = "0.2.8"
http-body = "0.4.5"
num_cpus = "1.15.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
    "bigdecimal",
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "decimal",
    "uuid",
    "mysql",
    "migrate",
    "tls",
    "offline",
    "ipnetwork",
] }
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono", "debug", "serde_yaml", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
