[package]
name = "database"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.89"
bigdecimal = { version = "0.4.10", features = ["serde"] }
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
dotenv = "0.15.0"
http = "1.4.2"
http-body = "1.0.1"
num_cpus = "1.17.0"
rand = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = [
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "uuid",
    "mysql",
    "migrate",
    "ipnetwork",
] }
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
